# DualHPGe_NuDEX

./: .gitignore  AGENTS.md  CMakeLists.txt  HPGeDual.cc  gui.mac  init_vis.mac  run.mac  run_100k.mac  vis.mac
NuDEX/NuDEXlib/: History  README
NuDEX/NuDEXlib/KnownLevels/: levels-param.data  levels-param.readme
NuDEX/NuDEXlib/LevelDensities/: level-densities-bfmeff.readme  level-densities-ctmeff.readme
NuDEX/NuDEXlib/PSF/: gdr-parameters&errors-exp.readme  gdr-parameters-exp-LOR.readme  gdr-parameters-theor.readme  photonuclear-parameters-exp.readme
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  Run.hh  RunAction.hh  SteppingAction.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  Run.cc  RunAction.cc  SteppingAction.cc
